css/styles.css
/* ... */
ul.value-dropdown li.selected
{
	background-color: rgba(255, 153, 0, 0.8);
	color: #000;
	text-shadow : none;
}

td.form-table-value > input[type="checkbox"]
{
	height: 15px;
	margin-top: 7px;
}

.table-row-operation > i
{
	cursor: pointer;
}

.action-icon
{
    cursor: pointer;
    margin: 3px 0px 3px 10px;

}

#main-logo
{
    display: block;
    margin-bottom: 20px;
}

#dash-logo
{
    display       : block;
    margin-left : 10px;
    margin-bottom: 10px;
}

.value-editor-ds
{
	color : #0088cc;
	cursor: pointer;
}

.text-button
{
	color  : #0088cc;
	cursor : pointer;
}

.text-button::before,
.text-button::after
{
	display            : inline-block;
	opacity            : 0;
	-webkit-transition : -webkit-transform 0.3s, opacity 0.2s;
	-moz-transition    : -moz-transform 0.3s, opacity 0.2s;
	transition         : transform 0.3s, opacity 0.2s;
}

.text-button::before
{
	margin-right      : 5px;
	content           : '[';
	-webkit-transform : translateX(10px);
	-moz-transform    : translateX(10px);
	transform         : translateX(10px);
}

.text-button::after
{
	margin-left       : 5px;
	content           : ']';
	-webkit-transform : translateX(-10px);
	-moz-transform    : translateX(-10px);
	transform         : translateX(-10px);
}

.text-button:hover::before,
.text-button:hover::after,
.text-button:focus::before,
.text-button:focus::after
{
	opacity           : 1;
	-webkit-transform : translateX(0px);
	-moz-transform    : translateX(0px);
	transform         : translateX(0px);
}

.setting-description
{
	font-size   : 10px;
	text-shadow : none;
	color: #6F6F6F;
	margin-bottom: 5px;
}

textarea.calculated-value-input
{
	position: absolute;
	width: 400px;
	height: 20px;
	resize : none;
	white-space : nowrap;
	overflow    : auto;
}

.datasource-input-suffix
{
	display          : inline-block;
	height           : 22px;
	padding          : 4px 10px;
	line-height      : 23px;
	vertical-align   : middle;
	background-color : #3d3d3d;
	text-transform   : uppercase;
	font-size        : 11px;
	min-width        : 16px;
	margin-left: 413px;
}

.styled-select select
{
	width              : 414px;
	height             : 30px;
	-webkit-appearance : none;
	border           : 1px solid #3d3d3d;
	background : url(../img/dropdown-arrow.png) no-repeat right #272727;
}

.title
{
	font-family : montserrat, sans-serif;
	text-transform : uppercase;
	vertical-align : baseline;
	-webkit-font-smoothing : antialiased;
	font-style  : normal;
	color : #d3d4d4;
}

.title.bordered
{
	border : solid 3px #d3d4d4;
	display : inline-block;
	padding : 5px 20px;
	line-height : 39px;
}

h1.title
{
	margin-bottom: 20px;
	font-size : 23px;
	letter-spacing : 2px;
}

h2.title
{
	font-size : 15px;
	line-height: 20px;
	margin : 0px;
	padding-top: 10px;
	padding-bottom: 10px;
}

.form-value input[type="checkbox"]
{
	margin-top: 8px;
}

.table-operation
{
	font-size      : 11px;
	padding-left   : 5px;
	padding-bottom : 5px;
	padding-top    : 1px;
}

#add-pane
{
	padding-top: 20px;
}

@media screen and (max-width : 960px)
{
	#add-pane
	{
		padding-top : 10px;
	}

	.text-button
	{
		font-size: 14px;
		line-height: 22px;
	}

	h1.title
	{
		margin-bottom  : 0px;
		font-size      : 13px;
		letter-spacing : 2px;
	}

	.title.bordered
	{
		padding     : 1px 8px;
		line-height : 25px;
	}

	#admin-menu
	{
		width        : 100%;
	}

	#main-header
	{
		position: absolute;
	}

	h2.title
	{
		font-size : 10px;
		padding-top    : 5px;
		padding-bottom : 5px;
	}

	#board-tools
	{
		width: 100%;
		float: none;
	}

	#datasources
	{
		width : 100%;
		float : none;
	}

	#board-actions
	{
		float: left;
	}

	#board-logo
	{
		float: left;
	}

	.modal header
	{
		height: 30px;
	}

	.modal
	{
		width: 100%;
		top: 0px;
		left: 0px;
	}

	.datasource-list-container
	{
		max-height : 135px;
	}

	.form-label
	{
		float: none;
		height: auto;
		width: auto;
		text-align: left;
		padding-top: 0px;
	}

	.form-value
	{
		width: 100%;
		padding-bottom: 10px;
		float: none;
	}

	.control-label
	{
		width: auto;
	}

	.modal section
	{
		padding-bottom: 10px;
		padding-top: 10px;
	}

	.datasource-input-suffix
	{
		font-size: 11px;
		margin: 0px;
		padding: 0px;
	}

	textarea, input[type="text"]
	{
		width: 95%;
	}

	.styled-select select
	{
		width: 100%;
	}

	.form-table-value-subtable
	{
		width: 100%;
	}

	.table-operation
	{
		font-size: 11px;
	}

	textarea.calculated-value-input
	{
		position: inherit;
		width: 95%;
	}
}

